# vrchat-guide

./: .gitignore  .gitmodules  LICENSE  README.md  README_Integration_Windows.md  _suql_error_log.txt  pyproject.toml  set_env.ps1  setup.py  vrchat_bot.json
SimulationSystem-VRCHAT/: Utilities.py  VRC_OSCLib.py  VRUpdateSimulation.py  VRfinalVersion.py  VRupdatedEarly.py  _suql_error_log.txt  audioRecorder.py  auto_correct_model.py  avatar_data.py  controlexpression.py  csvLogger.py  dialoge_helper.py  easyocr1.py  enums.py  fillerWords.py  integration.py  responseGenerator.py  responseGenerator01.py  retrievalFunction.py  test_audio.py  textBasedSimulation.py  trashCode.py  windowcapture.py
SimulationSystem-VRCHAT/Models/OCR/: easyocr.py
SimulationSystem-VRCHAT/STT/: deepgramSTT.py
SimulationSystem-VRCHAT/TTS/: audio_device.py  openaiTTS.py
SimulationSystem-VRCHAT/evaluations/: CSV_LOGS_2023-12-02_02-19.csv
SimulationSystem-VRCHAT/evaluations/Summary/: summarization_response_2024-04-05_10-48-46.txt  summarization_response_2024-04-05_10-52-49.txt  summarization_response_2024-04-05_11-00-31.txt  summarization_response_2024-04-05_11-06-15.txt  summarization_response_2024-04-05_11-18-35.txt  summarization_response_2024-04-10_11-39-17.txt
SimulationSystem-VRCHAT/evaluations/TestScenarios_CSV/: CSV_LOGS_2024-04-05_10-45.csv  CSV_LOGS_2024-04-05_10-47.csv  CSV_LOGS_2024-04-05_10-51.csv  CSV_LOGS_2024-04-05_10-56.csv  CSV_LOGS_2024-04-05_10-58.csv  CSV_LOGS_2024-04-05_11-04.csv  CSV_LOGS_2024-04-05_11-10.csv  CSV_LOGS_2024-04-05_11-15.csv  (+9 more)
config/: credentials.json  server_config.yaml  token.json
docs/: evaluation-framework.md  experiments.md
scripts/: db_sync.py  embedding_server.py  free_text_server.py  init_database.py  setup_dev.sh
src/vrchat_guide/: data_analysis.ipynb  utils.py  vrchatbot.py
src/worksheets/: agent.py  knowledge.py
tests/: test_db_connection.py  test_dependencies.py  test_entry_point.py  test_suql_servers.py  verify_install.py
vrchat_integration/: vrchat_agent.py
vrchat_integration/osc/: handler.py
vrchat_integration/voice/: manager.py
worksheets/: agent.py  annotation_utils.py  chat.py  chat_chainlit.py  convert_ws_to_sql_schema.py  environment.py  from_spreadsheet.py  gsheet_utils.py  interface_utils.py  knowledge.py  utils.py
worksheets/llm/: __init__.py  basic.py  utils.py
worksheets/modules/: __init__.py  agent_policy.py  dialogue.py  response_generator.py  rewriter.py  semantic_parser.py  utils.py
worksheets/prompts/: select_correct_output.prompt  supervisor_response_generator.prompt  validation_check.prompt
(+218 files in other folders)
